--- a/zum-assignment/style.css
+++ b/zum-assignment/style.css
@@ -550,7 +550,17 @@ main {
 .collect_container .title_wrap {
   display: flex;
 }
-.collect_container .item_list > ul {
+
+.content_wrapper .item_list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.content_wrapper .item_list > section {
+  margin: 24px 12px 0;
+}
+
+/* .collect_container .item_list > ul {
   margin-left: -24px;
 }
 .collect_container .item_list > ul:after {
@@ -562,7 +572,8 @@ main {
   float: left;
   margin-left: 24px;
   margin-bottom: 24px;
-}
+} */
+
 .collect_container .list_none {
   color: #797c7e;
   text-align: center;
